Fix some layout issues

--- a/themes/default/css/menu__dropdown.css
+++ b/themes/default/css/menu__dropdown.css
@@ -214,7 +214,7 @@ For example:
 	.menu-dropdown.is-hover-interface .menu-dropdown-item-a.toplevel-link {
 		{$BETA_CSS_PROPERTY,display: flex;}
 		align-items: center;
-		padding: 0 16px;
+		padding: 0 10px;
 	}
 
 	.menu-dropdown.is-hover-interface .menu-dropdown-item.toplevel.has-children > a::after {
